# libaec

./: CMakeLists.txt  INSTALL  README.md  configure.ac
cmake/: ConfigureChecks.cmake  LIBAECMacros.cmake  cacheinit.cmake  config.h.in  libaec-config.cmake.in  macros.cmake
src/: CMakeLists.txt  decode.c  decode.h  encode.c  encode.h  encode_accessors.c  encode_accessors.h  sz_compat.c  utime.c
tests/: CMakeLists.txt  check_aec.h
